--- a/.github/workflows/playwright-tests.yml
+++ b/.github/workflows/playwright-tests.yml
@@ -25,6 +25,7 @@ jobs:
     
     - name: Install dependencies
       run: |
+        sudo apt-get install libdbus-glib-1-2   
         pip install -r requirements.txt
         playwright install
     
